JsonString 을 Task 객체로 매핑하는 함수 추가

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,15 @@
             <version>${jackson.version}</version>
         </dependency>
 
+<!--        lombok-->
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
